<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrez_votre_e_mail_pour_r_initialiser_votre_mot_de_passe"
        android:textSize="16sp"
        android:paddingBottom="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signin_container_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entrez_votre_email"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:startIconDrawable="@drawable/baseline_person_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="52dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/r_initialiser_le_mot_de_passe"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginTop="16dp" />

</LinearLayout>
