<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/identifiez_vous"
        android:layout_marginTop="100dp"
        android:textSize="24sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp">



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:startIconDrawable="@drawable/mail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="12dp">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
             />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <TextView
            android:id="@+id/mdp_oublie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mot_de_passe_oubli"
            android:textAllCaps="true"
            android:textColor="@color/blue_tite"
            android:textSize="16sp"

            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_gravity="center_horizontal"
        android:text="@string/action_sign_in"
        android:drawableStart="@drawable/icon_login"
        android:drawableTint="@color/white"
        android:drawableTintMode="src_in"
        android:textStyle="bold"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="30dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nouveau_sur_power_home"
            android:layout_marginEnd="5dp"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cr_er_un_compte"
            android:textAllCaps="true"
            android:textColor="@color/blue_tite"
            android:textSize="16sp"
            android:layout_marginStart="5dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="32dp">
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OU"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/fcbk"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continuer_sur_facebook"
            android:textColor="@color/blue_tite"
            android:textSize="16sp"
            android:textStyle="bold" />



    </LinearLayout>
    <ProgressBar
        android:id="@+id/loading"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp" />


</LinearLayout>